--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.22.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.20"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -57,6 +60,7 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "sass": "^1.77.0"
     }
 }
