--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.20",
         "@reduxjs/toolkit": "^1.9.5",
         "@testing-library/dom": "^8.20.0",
         "@testing-library/jest-dom": "^5.17.0",
@@ -19,10 +22,8 @@
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.22.0",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.14.20"
+        "uuid": "^11.1.0",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -60,7 +61,7 @@
         "eslint-plugin-react": "^7.26.1",
         "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.5.1",
-        "typescript": "^4.4.4",
-        "sass": "^1.77.0"
+        "sass": "^1.77.0",
+        "typescript": "^4.4.4"
     }
 }
