--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react": "^18.2.0",
         "@types/react-dom": "^18.2.0",
         "@types/react-router-dom": "^5.3.3",
+        "classnames": "^2.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "5.4.0",
