--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "classnames": "^2.5.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.6.0",
         "react-icons": "5.4.0",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.22.0",
