--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,9 @@
         "isolatedModules": true,
         "noEmit": true,
         "jsx": "react",
+        "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "app/*": ["./src/*"],
         }
     },
     "include": [
